# ai-adviser

ai-adviser/: .env.example  .gitignore  README.md  ai_adviser.db  constraints.txt  debug_embed.py  pyproject.toml
ai-adviser/.test_memory/: user_u1.json
ai-adviser/adk_agent/: .env.example  README.md  __init__.py  agent.py
ai-adviser/adk_env/: pyvenv.cfg
ai-adviser/adk_env/Scripts/: activate  activate.bat
ai-adviser/src/ai_adviser/: config.py
ai-adviser/src/ai_adviser/adk/: __init__.py
ai-adviser/src/ai_adviser/adk/banking_orchestrator/: README.md  __init__.py  agent.py  tools.py
ai-adviser/src/ai_adviser/adk/banking_orchestrator/resources/: demo-uprof.json  fdecl-userprofile-v1.json
ai-adviser/src/ai_adviser/agent/: graph.py
ai-adviser/src/ai_adviser/api/: main.py  schemas.py
ai-adviser/src/ai_adviser/clients/: azure_models.py  azure_search.py  foundry_endpoints.py
ai-adviser/src/ai_adviser/memory/: schema.sql  store.py  summarizer.py
ai-adviser/src/ai_adviser/observability/: docker-compose.yml  langfuse.py  metrics.py  prometheus.yml  tracing.py
ai-adviser/src/ai_adviser/prompts/: loader.py  rag_system.md
ai-adviser/src/ai_adviser/rag/: citations.py  context.py  guard.py  rewrite.py
ai-adviser/src/langgraph/: graph.py
ai-adviser/tests/: test_banking_orchestrator.py  test_citation_validator.py  test_context_builder.py  test_kb_rag_chat.py  test_prompt_loader.py  test_rag_chat.py
